[tool.poetry]
name = "nonebot-plugin-flatter"
version = "0.1.0"
description = "Nonebot flatter plugin for QQ in Nonebot2"
authors = ["Jerry080801 <jerry080801@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
